--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             let button = new cba.WalletButtons("#widget-google-Pay", token,
                 {
                     amount_label: "Payment Amount",
-                    country: "AU"
+                    country: "AU",
+                    wallet: ["apple"]
                 }
             )
             button.setEnv('preproduction_cba');
