--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             {
 
                 "amount": 1,
+                "meta": {
+        "store_id": "123",
+        "store_name": "Sujeet Wallet Pay"
+    },
                 "reference": "reference",
                 "description": "description",
                 "currency": "AUD",
