--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 "amount": 1,
                 "meta": {
         "store_id": "123",
-        "store_name": "Sujeet Wallet Pay"
+        "store_name": "merchant.com.cba.powerboard"
     },
                 "reference": "reference",
                 "description": "description",
