--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
             var requestBody =
             {
 
-                "amount": 100,
-                "meta": {
-        "store_id": "123",
-        "store_name": "merchant.com.cba.powerboard"
-    },
+                "amount": 10,
                 "reference": "reference",
                 "description": "description",
                 "currency": "AUD",
@@ -22,7 +18,7 @@
                     "last_name": "Citizen",
                     "phone": "+5555555555",
                     "payment_source": {
-                        "gateway_id": "65756872176e2ba808ac8fed",
+                        "gateway_id": "63e978c34219416672150532",
                         "address_line1": "asd1",
                         "address_line2": "asd2",
                         "address_line3": "asd3",
@@ -31,6 +27,10 @@
                         "address_country": "US",
                         "address_postcode": "12345"
                     }
+                },
+                "meta": {
+                    "store_id": "123",
+                    "store_name": "Store 123"
                 }
 
             }
@@ -39,7 +39,7 @@
             let url = 'https://api.preproduction.powerboard.commbank.com.au/v1/charges/wallet';
             let method = 'POST';
             let headers = {
-                "x-user-secret-key": "857bb1f772cfdd3de2c96f993bee1e9c8f10671a",
+                "x-user-secret-key": "ea027ec55123326d23e4ca897ba6e201102e3d5a",
                 "Content-Type": "application/json"
             }
             axios({
@@ -64,15 +64,14 @@
             let button = new cba.WalletButtons("#widget-google-Pay", token,
                 {
                     amount_label: "Payment Amount",
-                    country: "AU",
-                    wallet: ["apple"]
+                    country: "AU"
                 }
             )
             button.setEnv('preproduction_cba');
             button.onUnavailable(() => console.log("No wallet buttons available"));
             button.onPaymentSuccessful((data) => console.log('Payment Data', data));
-            button.onPaymentError((data) => console.log("The payment was not successful", data));
-            button.onPaymentInReview((data) => console.log("The payment is on fraud review", data));
+            button.onPaymentError((data) => console.log("The payment was not successful"));
+            button.onPaymentInReview((data) => console.log("The payment is on fraud review"));
             button.load();
         }
 
